# OOP_hw6_var6

./: CMakeLists.txt  main.cpp  tests.cpp
objects/bandit/: bandit.cpp  bandit.h
objects/bear/: bear.cpp  bear.h
objects/elf/: elf.cpp  elf.h
objects/npc/: npc.cpp  npc.h
